@@ -4,6 +4,14 @@
 
  Changes between 1.0.0 and 1.1.0  [xx XXX xxxx]
 
+   *) Add algorithm specific signature printing. An individual ASN1 method
+      can now print out signatures instead of the standard hex dump. 
+
+      More complex signatures (e.g. PSS) can print out more meaningful
+      information. Include DSA version that prints out the signature
+      parameters r, s.
+     [Steve Henson]
+
   *) Add -trusted_first option which attempts to find certificates in the
      trusted store even if an untrusted chain is also supplied.
      [Steve Henson]
